<resources>
    <string name="app_name">BackpackerID</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_nama">Nama</string>
    <string name="hint_tanggal_lahir">Tanggal lahir</string>
    <string name="hint_kota_asal">Kota asal</string>
    <string name="label_btn_sign_up">Sign Up</string>
    <string name="title_activity_fullscreen_budget">FullscreenBudgetActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="hint_sign_in">Sign in</string>
    <string name="label_btn_register_here"><![CDATA[>> Register here <<]]></string>
    <string name="label_btn_logout">Logout</string>
    <string name="title_item_list">Tourism Spots</string>
    <string name="title_item_detail">Item Detail</string>

    <string name="pager_title_home">Home</string>
    <string name="pager_title_places">Visited Places</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
