<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="goronald.web.id.backpackerid.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nama"
            android:imeOptions="actionNext"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

     <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_kotaasal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_kota_asal"
            android:imeOptions="actionNext"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_tgllahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_tanggal_lahir"
            android:imeOptions="actionNext"
            android:inputType="date" />

    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_vertical_margin" />

        <Button
        android:id="@+id/UpdateProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="update Profile"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_vertical_margin" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:hint="Old Password"
            android:id="@+id/text_password_old"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:hint="New Password"
            android:id="@+id/text_password_new"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:hint="Konfirmasi Password"
            android:id="@+id/text_password_confirm"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_vertical_margin" />

    <Button
        android:id="@+id/UpdatePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:text="Change Password"/>

    </LinearLayout>

</ScrollView>